--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
----
-permalink: /404.html
-layout: default
----
-
+<!DOCTYPE html>
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
